# auth-service

./: Dockerfile  pyproject.toml
auth/: __init__.py  app.py  authenticate.py  database.py  templating.py
auth/models/: key.py  status.py  user.py
templates/emails/: login.html
tests/: endpoints.py
