[tool.poetry]
name = "Zech.Codes.Auth"
version = "0.1.0"
description = ""
authors = ["Zech Zimmerman <hi@zech.codes>"]

[tool.poetry.dependencies]
python = "^3.8"
hypercorn = "^0.9.4"
pyjwt = "^1.7.1"
cryptography = "^2.9"
sqlalchemy = "^1.3.16"
bevy = "^0.2.0"
starlette = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
